syntax = "proto3";

package dataclean;

option go_package = "./dataclean";

message CleanArticleRequest {
  string article_id = 1;              // 文章ID
  string title = 2;                   // 标题
  optional string brief = 3;          // 摘要（可选，自动截取正文前150字）
  string markdown_content = 4;        // 轻量 Markdown 正文
  optional string cover_image_url = 5;// 封面图URL（可选）
  string manual_type_tag = 6;         // 一级标签
  repeated string secondary_tags = 7; // 二级标签
  string author_id = 8;               // 作者ID
}

message CleanArticleResponse {
  bool is_safe = 1;
  string reason = 2;
}

service Dataclean {
  rpc CleanArticle(CleanArticleRequest) returns(CleanArticleResponse);
}